# KartVision

./: .gitignore  README.md  pyproject.toml  region_setup.py
src/kartvision/: analyzer.py  app.py  image_editor.py  imagelib.py  main.py  screenshot.py  server.py  user.py  visionapi.py
src/kartvision/static/css/: edit.css  history.css  home.css  result.css
src/kartvision/static/js/: edit.js  history.js  result.js
src/kartvision/templates/: edit.html  history.html  home.html  result.html
